# mkdocs-blogging-plugin

./: .pre-commit-config.yaml  .yamllint  pyproject.toml  sitemap.xml
mkdocs_blogging_plugin/: plugin.py
