[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.2rc1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]

[tool.poetry]
name = "mkdocs-blogging-plugin"
version = "1.2.2rc1"
description = "Mkdocs plugin that generates a blog index page sorted by creation date."
license = "MIT"
keywords = ["mkdocs", "blog", "plugin"]
classifiers = ["Development Status :: 5 - Production/Stable", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
authors = ["Liang Yesheang <liang2kl@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.1"
babel = ">=2.7.0"
gitpython = ">=3.1.18"
jinja2 = ">=2"
mkdocs = ">=1.0"
mkdocs-material = {version = ">=7.2.6", extras = ["docs"]}
mkdocs-awesome-pages-plugin = {version = ">=2.5.0", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"
